# cloudreports-python

./: .gitignore  README.md  pyproject.toml
src/cloudreports/: client.py  database.py  functions.py
tests/: test.py
