[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudreports"
version = "0.0.1"
authors = [
  { name="BR Systems", email="help@cloudreports.ru" },
]
description = "Official Library Cloudreports.ru"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brmoscow/cloudreports-python"
"Bug Tracker" = "https://github.com/brmoscow/cloudreports-python/issues"